# kassia-api

./: .dockerignore  .flake8  .gitignore  .pyproject.toml_  Dockerfile  Pipfile  README.md  UIdev.py  __init__.py  app.py  complex_doc_template.py  connector.py  fly.toml  font_reader.py  kassia.py  kassia.sublime-project  kassia.sublime-workspace  kassia_main.py  lyric.py  music_parser.py  neume.py  neume_chunk.py  pyproject.toml  requirements.txt  score.py  syllable.py  syllable_line.py  syllable_type.py  test.ipynb  tt.xml
.github/workflows/: python-package.yml
builder/: coord.py  font_reader.py  neume.py  neume_chunk.py
builder/fonts/Slavonic/: analyze.ipynb
examples/: sample.xml  sample2.xml  sampleOut.xml  voskresenia2.xml
fonts/KA Almouzios/: classes.yaml  glyphnames.yaml
fonts/KA New Stathis/: classes.yaml  glyphnames.yaml
headers/: psaltoglas1.xml  psaltoglas2.xml
kassia/: drop_cap.py  font_reader.py  lyric.py  neume_type.py  project_organizer.py
kassia/fonts/KA Almouzios/: classes.yaml
kassia/fonts/KA New Stathis/: classes.yaml
tests/: chronos_test.xml  dash_test.xml  dropcap_test.xml  fthora_test.xml  header_footer_test.xml  martyria_test.xml  paragraph_test.xml  test_fonts_visual.py  underscore_test.xml  воскресениѧ.txt
tests/headers/: header1.xml  psaltoglas2.xml
tests/shorthand/: воскресениѧ.txt
tests/txt/: воскресениѧ.txt
tests/xml/: sampleHeader.xml  sampleOut.xml  voskresenia.xml  voskresenia1.xml  voskresenia2.xml
