[tool.poetry]
name = "kassia"
version = "0.3"
description = "A CLI program for exporting scores in Byzantine Notation"
authors = ["t-bullock <5100363+t-bullock@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/t-bullock/kassia"

[tool.poetry.dependencies]
python = "^3.7"
reportlab = ">=3.6.0"
ruyaml = ">=0.20.0"
schema = ">=0.7.4"

[tool.poetry.dev-dependencies]
pylint = "*"
flake8 = "*"
pytest = "*"
isort = "*"
diff-pdf-visually = ">=1.6.2"

[build-system]
requires = ["poetry>=0.12", "setuptools>=30.3.0,<50"]
build-backend = "poetry.masonry.api"
